// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project model should be able to update the description 1`] = `
Array [
  Object {
    "op": "replace",
    "path": "/description",
    "value": "Hello World",
  },
]
`;

exports[`Project model should be able to update the name 1`] = `
Array [
  Object {
    "op": "replace",
    "path": "/name",
    "value": "Hello World",
  },
]
`;

exports[`Project model should be able to update the priority 1`] = `
Array [
  Object {
    "op": "replace",
    "path": "/priority",
    "value": "HIGH",
  },
]
`;

exports[`Projects model should be able to add new project when create 1`] = `
Array [
  Object {
    "projects": Array [
      Object {
        "description": "This is a description",
        "id": "123",
        "name": "My Project",
        "priority": "LOW",
      },
    ],
  },
  Object {
    "projects": Array [
      Object {
        "description": "This is a description",
        "id": "123",
        "name": "My Project",
        "priority": "LOW",
      },
      Object {
        "description": "This is a description",
        "id": "456",
        "name": "My Second Project",
        "priority": "LOW",
      },
    ],
  },
]
`;

exports[`Projects model should be able to remove a project 1`] = `
Array [
  Object {
    "projects": Array [
      Object {
        "description": "This is a description",
        "id": "123",
        "name": "My Project",
        "priority": "LOW",
      },
    ],
  },
  Object {
    "projects": Array [
      Object {
        "description": "This is a description",
        "id": "123",
        "name": "My Project",
        "priority": "LOW",
      },
      Object {
        "description": "This is a description",
        "id": "456",
        "name": "My Second Project",
        "priority": "LOW",
      },
    ],
  },
  Object {
    "projects": Array [
      Object {
        "description": "This is a description",
        "id": "456",
        "name": "My Second Project",
        "priority": "LOW",
      },
    ],
  },
]
`;
